--- a/android/build.gradle
+++ b/android/build.gradle
@@ -21,5 +21,5 @@ android {
 }
 
 dependencies {
-  compile "com.facebook.react:react-native:+" // From node_modules
+  compile "com.facebook.react:react-native:${safeExtGet('reactNativeVersion', '+')}" // From node_modules
 }
