--- a/package.json
+++ b/package.json
@@ -7,15 +7,19 @@
   "license": "MIT",
   "scripts": {
     "precommit": "lint-staged",
-    "prettier": "prettier --write '**/*.{js,md}'"
+    "prettier": "prettier --write '**/*.{js,md}'",
+    "typecheck": "flow ."
   },
   "lint-staged": {
-    "**/*.{js,md}": ["prettier --write", "git add"]
+    "**/*.{js,md}": [
+      "prettier --write",
+      "git add"
+    ]
   },
   "devDependencies": {
-    "flow-bin": "0.57.3",
+    "flow-bin": "0.80.0",
     "husky": "^0.14.3",
-    "lint-staged": "^6.0.0",
-    "prettier": "^1.9.2"
+    "lint-staged": "^7.2.2",
+    "prettier": "^1.14.2"
   }
 }
