--- a/.flowconfig
+++ b/.flowconfig
@@ -1,4 +1,5 @@
 [ignore]
+<PROJECT_ROOT>/example/
 
 [include]
 
@@ -8,6 +9,7 @@
 
 [options]
 munge_underscores=true
+suppress_type=$FlowFixMe
 
 [version]
 ^0.80.0
