--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,44 @@
-*.xcworkspace
+# OSX
+.DS_Store
+
+# Xcode
+build/
+*.pbxuser
+!default.pbxuser
+*.mode1v3
+!default.mode1v3
+*.mode2v3
+!default.mode2v3
+*.perspectivev3
+!default.perspectivev3
 xcuserdata
+*.xccheckout
+*.moved-aside
+DerivedData
+*.hmap
+*.ipa
+*.xcuserstate
+project.xcworkspace
 
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+# Android/IntelliJ
+build/
+.idea
+.gradle
+local.properties
+*.iml
+
+# node.js
 node_modules/
+npm-debug.log
+yarn-error.log
 
-*.DS_Store
-Thumbs.db
-Desktop.ini
+# BUCK
+buck-out/
+\.buckd/
+*.keystore
 
-.vscode/
+# Bundle artifact
+*.jsbundle
 
-android/build/
+# CocoaPods
+Pods/
