--- a/package.json
+++ b/package.json
@@ -1,28 +1,39 @@
 {
   "name": "react-native-dev-menu",
-  "version": "2.0.2",
+  "description": "Add custom items to the React Native dev menu",
+  "version": "3.0.0",
   "main": "index.js",
   "repository": "https://github.com/zoontek/react-native-dev-menu.git",
   "author": "Mathieu Acthernoene <zoontek@gmail.com>",
   "license": "MIT",
+  "keywords": [
+    "react-native",
+    "react native",
+    "menu",
+    "developer"
+  ],
   "scripts": {
-    "precommit": "lint-staged",
-    "prettier": "prettier --write '**/*.{js,md}'",
+    "format": "prettier --write '**/*.{js,json,md}'",
     "typecheck": "flow ."
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
   "lint-staged": {
-    "**/*.{js,md}": [
-      "prettier --write",
+    "**/*.{js,json,md}": [
+      "yarn format",
       "git add"
     ]
   },
   "peerDependencies": {
-    "react-native": ">=0.56.0"
+    "react-native": ">=0.60.0"
   },
   "devDependencies": {
-    "flow-bin": "0.80.0",
-    "husky": "0.14.3",
-    "lint-staged": "7.2.2",
-    "prettier": "1.14.2"
+    "flow-bin": "0.98.0",
+    "husky": "3.0.1",
+    "lint-staged": "9.2.1",
+    "prettier": "1.18.2"
   }
 }
