--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,9 @@
 # OSX
+#
 .DS_Store
 
 # Xcode
+#
 build/
 *.pbxuser
 !default.pbxuser
@@ -18,19 +20,19 @@ DerivedData
 *.hmap
 *.ipa
 *.xcuserstate
-project.xcworkspace
+ios/.xcode.env.local
 
 # Android/IntelliJ
+#
 build/
 .idea
 .gradle
 local.properties
 *.iml
-
-# Visual Studio Code
-.vscode/
+*.hprof
 
 # node.js
+#
 node_modules/
 npm-debug.log
 yarn-error.log
@@ -41,8 +43,21 @@ buck-out/
 *.keystore
 !debug.keystore
 
+# fastlane
+#
+# It is recommended to not store the screenshots in the git repo. Instead, use fastlane to re-generate the
+# screenshots whenever they are needed.
+# For more information about the recommended setup visit:
+# https://docs.fastlane.tools/best-practices/source-control/
+
+**/fastlane/report.xml
+**/fastlane/Preview.html
+**/fastlane/screenshots
+**/fastlane/test_output
+
 # Bundle artifact
 *.jsbundle
 
-# CocoaPods
-Pods/
+# Ruby / CocoaPods
+example/ios/Pods/
+example/vendor/bundle/
