--- a/package.json
+++ b/package.json
@@ -28,9 +28,9 @@
   ],
   "scripts": {
     "format": "prettier '**/*' -u -w",
-    "prepack": "yarn setup-hooks && bob build",
-    "setup-hooks": "git config --local core.hooksPath .hooks",
-    "tscheck": "tsc --project ./ --noEmit"
+    "postinstall": "git config --local core.hooksPath .hooks",
+    "prepack": "bob build",
+    "typecheck": "tsc --project ./ --noEmit"
   },
   "react-native-builder-bob": {
     "source": "src",
@@ -57,7 +57,7 @@
     "prettier": "^2.7.1",
     "prettier-plugin-organize-imports": "^3.0.0",
     "react": "^18.0.0",
-    "react-native": "^0.69.1",
+    "react-native": "^0.69.2",
     "react-native-builder-bob": "^0.18.3",
     "typescript": "^4.7.4"
   }
