--- a/example/package.json
+++ b/example/package.json
@@ -6,19 +6,22 @@
     "clean-modules": "rm -rf ./node_modules/react-native-dev-menu/{example,node_modules}",
     "clean": "rm -rf ./node_modules ./ios/Pods",
     "preinstall": "cd .. && yarn prepack && cd example",
-    "pod-update": "cd ./ios && pod update && cd ..",
-    "postinstall": "yarn clean-modules && yarn pod-update",
+    "postinstall": "yarn clean-modules && pod-install",
     "start": "react-native start",
     "reinstall": "yarn clean && yarn install"
   },
   "dependencies": {
-    "react": "18.0.0",
-    "react-native": "0.69.2",
+    "react": "18.2.0",
+    "react-native": "0.71.3",
     "react-native-dev-menu": "../"
   },
   "devDependencies": {
-    "@babel/core": "^7.18.9",
-    "@babel/runtime": "^7.18.9",
-    "metro-react-native-babel-preset": "^0.70.3"
+    "@babel/core": "^7.20.12",
+    "@babel/preset-env": "^7.20.2",
+    "@babel/runtime": "^7.20.13",
+    "@types/react": "^18.0.27",
+    "metro-react-native-babel-preset": "0.73.7",
+    "pod-install": "^0.1.38",
+    "typescript": "^4.9.5"
   }
 }
