--- a/package.json
+++ b/package.json
@@ -51,14 +51,14 @@
     "react-native": ">=0.61.0"
   },
   "devDependencies": {
-    "@types/react": "^18.0.15",
-    "@types/react-native": "^0.69.3",
-    "lint-staged": "^13.0.3",
-    "prettier": "^2.7.1",
-    "prettier-plugin-organize-imports": "^3.0.0",
-    "react": "^18.0.0",
-    "react-native": "^0.69.2",
-    "react-native-builder-bob": "^0.18.3",
-    "typescript": "^4.7.4"
+    "@babel/core": "^7.21.0",
+    "@types/react": "^18.0.27",
+    "lint-staged": "^13.1.2",
+    "prettier": "^2.8.4",
+    "prettier-plugin-organize-imports": "^3.2.2",
+    "react": "18.2.0",
+    "react-native": "0.71.3",
+    "react-native-builder-bob": "^0.20.4",
+    "typescript": "^4.9.5"
   }
 }
